--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.11.0",
     "daisyui": "^5.1.6",
     "firebase": "^12.2.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
