--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "daisyui": "^5.1.6",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.19",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.12"
   },
